# py_cfe_framework

./: .gitignore  README.md  main.py  pyproject.toml  serializer.py  utils.py
cfe_framework/: __init__.py  main.py  utils.py
cfe_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cfe_framework/mdclasses/: accountingregister.py  accumulationregister.py  businessprocess.py  catalog.py  commandgroup.py  commoncommand.py  commonmodule.py  configuration.py  constant.py  dataprocessor.py  document.py  enum.py  genericV8Object.py  httpservice.py  informationregister.py  language.py  metadataobject.py  modulekind.py  objectform.py  referencedatatype.py  report.py  role.py  typeproducing_object.py
mdclasses/: commonmodule.py  configuration.py  generated_type.py  language.py  metadataobject.py  role.py
sandbox/: ConfigDumpInfo.xml  Configuration.xml
sandbox/Languages/: Русский.xml
sandbox/Roles/: ЦАУ_ОсновнаяРоль.xml
