[project]
name = "cfe_framework"
version = "0.1.0"
description = "Python framework for working with CFE files"
authors = [{ name = "Oleg Zolotarev", email = "ovzolotarev@gmail.com" }]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    # list any dependencies here, e.g., "requests >= 2.25.1"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cfe_framework"]
